# splat2mc

./: .gitignore  README.md  pyproject.toml
src/splat2mc/: __init__.py  cli.py  converter.py
