[project]
name = "splat2mc"
version = "0.1.0"
description = "Convert 3D Gaussian Splats to Minecraft particle datapacks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "plyfile>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
splat2mc = "splat2mc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splat2mc"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
